CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

INCLUDE( ../macro_template.cmake )
INCLUDE( ../mingw_template.cmake )

PROJECT( Mengine_MinGW )

SET(MENGINE_TARGET "MINGW")

SET(MENGINE_RENDER_OPENGL OFF CACHE BOOL "MENGINE_RENDER_OPENGL" FORCE)
SET(MENGINE_RENDER_DIRECTX ON CACHE BOOL "MENGINE_RENDER_DIRECTX" FORCE)

SET(MENGINE_PLATFORM_WIN32 ON CACHE BOOL "MENGINE_PLATFORM_WIN32" FORCE)
SET(MENGINE_PLATFORM_WIN64 OFF CACHE BOOL "MENGINE_PLATFORM_WIN64" FORCE)

SET(MENGINE_TARGET_MSVC OFF CACHE BOOL "MENGINE_TARGET_MSVC" FORCE)
SET(MENGINE_TARGET_MINGW ON CACHE BOOL "MENGINE_TARGET_MINGW" FORCE)
SET(MENGINE_TARGET_SDL OFF CACHE BOOL "MENGINE_TARGET_SDL" FORCE)

SET( MENGINE_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../.. )

# output paths
SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${MENGINE_REPOSITORY}/build_temp/${PROJECT_NAME} )
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${MENGINE_REPOSITORY}/bin/mingw/${CMAKE_BUILD_TYPE} )

# input and thirdparty paths
SET( THIRDPARTY_DIR ${MENGINE_REPOSITORY}/dependencies )
SET( THIRDPARTY_LIB_DIR ${MENGINE_REPOSITORY}/build_temp/${MENGINE_LIB_DIR}/${CMAKE_BUILD_TYPE} )

SET( SOURCE_DIR ${MENGINE_REPOSITORY}/src )
SET( CMAKE_TEMP_DIR ${MENGINE_REPOSITORY}/CMakeTemp/MinGW/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE} )

# plugins
ADD_PLUGIN(MENGINE_PLUGIN_TTF ON OFF "TTF")
ADD_PLUGIN(MENGINE_PLUGIN_SPINE OFF OFF "SPINE")
ADD_PLUGIN(MENGINE_PLUGIN_CURL ON OFF "CURL")
ADD_PLUGIN(MENGINE_PLUGIN_ASTRALAX ON ON "ASTRALAX")
ADD_PLUGIN(MENGINE_PLUGIN_STEAM ON ON "STEAM")
ADD_PLUGIN(MENGINE_PLUGIN_OZZ_ANIMATION ON ON "OZZ")
ADD_PLUGIN(MENGINE_PLUGIN_ANDROID_NATIVE_FACEBOOK OFF OFF "MENGINE_PLUGIN_ANDROID_NATIVE_FACEBOOK")
ADD_PLUGIN(MENGINE_PLUGIN_ANDROID_NATIVE_UNITYADS OFF OFF "MENGINE_PLUGIN_ANDROID_NATIVE_UNITYADS")
ADD_PLUGIN(MENGINE_PLUGIN_ANDROID_NATIVE_ADMOB OFF OFF "MENGINE_PLUGIN_ANDROID_NATIVE_ADMOB")
ADD_PLUGIN(MENGINE_PLUGIN_ANDROID_NATIVE_DEVTODEV OFF OFF "MENGINE_PLUGIN_ANDROID_NATIVE_DEVTODEV")

SET(MENGINE_WIN32_SOCKET_DLL OFF CACHE BOOL "Socket" FORCE)

ADD_DEFINITIONS(-DMENGINE_MASTER_RELEASE)

SET( APPLICATION_DEPENDENCIES )
SET( APPLICATION_LIBS )
SET( APPLICATION_LIB_PATHS )

INCLUDE_DIRECTORIES( ${SOURCE_DIR} )

ADD_SUBDIRECTORY( ${SOURCE_DIR} ${CMAKE_TEMP_DIR}/src )

ADD_SUBDIRECTORY( ${SOURCE_DIR}/WindowsLayer ${CMAKE_TEMP_DIR}/WindowsLayer )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Win32Application ${CMAKE_TEMP_DIR}/Win32Apllication )

ADD_DEPENDENCIES( Win32Application ${APPLICATION_DEPENDENCIES} )