CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(Tools_MinGW)

INCLUDE(../macro_template.cmake)
INCLUDE(../mingw_template.cmake)

SET_MENGINE_ENVIRONMENT(PYTHON MINGW DIRECTX X86 WIN32 MINGW)

SET(MENGINE_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../..)

# output paths
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${MENGINE_REPOSITORY}/build_temp/${MENGINE_LIB_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${MENGINE_REPOSITORY}/bin/mingw_tools/${CMAKE_BUILD_TYPE})

# input and thirdparty paths
SET(THIRDPARTY_DIR ${MENGINE_REPOSITORY}/dependencies)
SET(THIRDPARTY_LIB_DIR ${MENGINE_REPOSITORY}/build_temp/${MENGINE_LIB_DIR}/${CMAKE_BUILD_TYPE})

SET(MENGINE_SOURCE_DIR ${MENGINE_REPOSITORY}/src) 
SET(CMAKE_TEMP_DIR ${MENGINE_REPOSITORY}/CMakeTemp/Tools_WIN32/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE})

# implementation
SET(MENGINE_ASTRALAX_PARTICLE_DLL ON)
SET(MENGINE_ASTRALAX_PARTICLE2_DLL ON)

SET(APPLICATION_DEPENDENCIES)
SET(APPLICATION_LIBS)

INCLUDE_DIRECTORIES(${MENGINE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${MENGINE_SOURCE_DIR}/Tools)
INCLUDE_DIRECTORIES(${THIRDPARTY_DIR}/stdex/include)

ADD_SUBDIRECTORY(${MENGINE_SOURCE_DIR}/PrecompiledHeader ${CMAKE_TEMP_DIR}/PrecompiledHeader)
ADD_SUBDIRECTORY(${MENGINE_SOURCE_DIR}/Utils ${CMAKE_TEMP_DIR}/Utils)
ADD_SUBDIRECTORY(${MENGINE_SOURCE_DIR}/Kernel ${CMAKE_TEMP_DIR}/Kernel)
ADD_SUBDIRECTORY(${MENGINE_SOURCE_DIR}/Metacode ${CMAKE_TEMP_DIR}/Metacode)

set(SOURCE_DIR_SYSTEMS ${MENGINE_SOURCE_DIR}/Systems)
set(TEMP_DIR_SYSTEMS ${CMAKE_TEMP_DIR}/Systems)
set(SOURCE_DIR_SERVICES ${MENGINE_SOURCE_DIR}/Services)
set(TEMP_DIR_SERVICES ${CMAKE_TEMP_DIR}/Services)
set(SOURCE_DIR_PLUGINS ${MENGINE_SOURCE_DIR}/Plugins)
set(TEMP_DIR_PLUGINS ${CMAKE_TEMP_DIR}/Plugins)

ADD_SUBDIRECTORY(${SOURCE_DIR_SYSTEMS}/Win32UnicodeSystem ${TEMP_DIR_SYSTEMS}/Win32UnicodeSystem)
ADD_SUBDIRECTORY(${SOURCE_DIR_SYSTEMS}/Win32ThreadSystem ${TEMP_DIR_SYSTEMS}/Win32ThreadSystem)

ADD_SUBDIRECTORY(${SOURCE_DIR_SERVICES}/ServiceFactory ${TEMP_DIR_SERVICES}/ServiceFactory)
ADD_SUBDIRECTORY(${SOURCE_DIR_SERVICES}/NotificationService ${TEMP_DIR_SERVICES}/NotificationService)
ADD_SUBDIRECTORY(${SOURCE_DIR_SERVICES}/ServiceProvider ${TEMP_DIR_SERVICES}/ServiceProvider)
ADD_SUBDIRECTORY(${SOURCE_DIR_SERVICES}/ServiceStringize ${TEMP_DIR_SERVICES}/ServiceStringize)
ADD_SUBDIRECTORY(${SOURCE_DIR_SERVICES}/ServiceArchive ${TEMP_DIR_SERVICES}/ServiceArchive)
ADD_SUBDIRECTORY(${SOURCE_DIR_SERVICES}/ServiceFile ${TEMP_DIR_SERVICES}/ServiceFile)
ADD_SUBDIRECTORY(${SOURCE_DIR_SERVICES}/ServiceCodec ${TEMP_DIR_SERVICES}/ServiceCodec)
ADD_SUBDIRECTORY(${SOURCE_DIR_SERVICES}/ServiceData ${TEMP_DIR_SERVICES}/ServiceData)
ADD_SUBDIRECTORY(${SOURCE_DIR_SERVICES}/ServiceMemory ${TEMP_DIR_SERVICES}/ServiceMemory)
ADD_SUBDIRECTORY(${SOURCE_DIR_SERVICES}/ServiceConverter ${TEMP_DIR_SERVICES}/ServiceConverter)
ADD_SUBDIRECTORY(${SOURCE_DIR_SERVICES}/ServiceOptions ${TEMP_DIR_SERVICES}/ServiceOptions)
ADD_SUBDIRECTORY(${SOURCE_DIR_SERVICES}/ServiceLogger ${TEMP_DIR_SERVICES}/ServiceLogger)
ADD_SUBDIRECTORY(${SOURCE_DIR_SERVICES}/ServicePlugin ${TEMP_DIR_SERVICES}/ServicePlugin)
ADD_SUBDIRECTORY(${SOURCE_DIR_SERVICES}/ServiceThread ${TEMP_DIR_SERVICES}/ServiceThread)
ADD_SUBDIRECTORY(${SOURCE_DIR_SERVICES}/ServiceConfig ${TEMP_DIR_SERVICES}/ServiceConfig)
ADD_SUBDIRECTORY(${SOURCE_DIR_SERVICES}/VocabularyService ${TEMP_DIR_SERVICES}/VocabularyService)

ADD_SUBDIRECTORY(${MENGINE_SOURCE_DIR}/Platform/Win32Platform ${CMAKE_TEMP_DIR}/Platform/Win32Platform)

ADD_SUBDIRECTORY(${SOURCE_DIR_PLUGINS}/DevelopmentConverterPlugin ${TEMP_DIR_PLUGINS}/DevelopmentConverterPlugin)
ADD_SUBDIRECTORY(${SOURCE_DIR_PLUGINS}/ImageCodecPlugin ${TEMP_DIR_PLUGINS}/ImageCodecPlugin)
ADD_SUBDIRECTORY(${SOURCE_DIR_PLUGINS}/XmlToBinPlugin ${TEMP_DIR_PLUGINS}/XmlToBinPlugin)
ADD_SUBDIRECTORY(${SOURCE_DIR_PLUGINS}/ZipPlugin ${TEMP_DIR_PLUGINS}/ZipPlugin)
ADD_SUBDIRECTORY(${SOURCE_DIR_PLUGINS}/LZ4Plugin ${TEMP_DIR_PLUGINS}/LZ4Plugin)
ADD_SUBDIRECTORY(${SOURCE_DIR_PLUGINS}/Win32FileGroupPlugin ${TEMP_DIR_PLUGINS}/Win32FileGroupPlugin)
ADD_SUBDIRECTORY(${SOURCE_DIR_PLUGINS}/MetabufLoaderPlugin ${TEMP_DIR_PLUGINS}/MetabufLoaderPlugin)

ADD_SUBDIRECTORY(${MENGINE_SOURCE_DIR}/Tools ${CMAKE_TEMP_DIR}/Tools)