CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

PROJECT( Tools_WIN32 )

INCLUDE( ../macro_template.cmake )

SET(MENGINE_TARGET "WIN32")

SET(MENGINE_PLATFORM_WIN32 ON CACHE BOOL "WIN32" FORCE)

SET(MENGINE_TARGET_MSVC ON CACHE BOOL "MSVC" FORCE)
SET(MENGINE_TARGET_MINGW OFF CACHE BOOL "MINGW" FORCE)
SET(MENGINE_TARGET_SDL OFF CACHE BOOL "SDL" FORCE)

INCLUDE( ../win32_template.cmake )

SET( MENGINE_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../.. )

# output paths
SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${MENGINE_REPOSITORY}/build_temp/${MENGINE_LIB_DIR} )
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${MENGINE_REPOSITORY}/bin/win32_tools )

# input and thirdparty paths
SET( THIRDPARTY_DIR ${MENGINE_REPOSITORY}/dependencies )
SET( THIRDPARTY_LIB_DIR ${MENGINE_REPOSITORY}/build_temp/${MENGINE_LIB_DIR}/${CMAKE_BUILD_TYPE} )

SET( SOURCE_DIR ${MENGINE_REPOSITORY}/src )
SET( CMAKE_TEMP_DIR ${MENGINE_REPOSITORY}/CMakeTemp/Tools_WIN32/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE} )

# implementation
SET(MENGINE_ASTRALAX_PARTICLE_DLL ON)
SET(MENGINE_ASTRALAX_PARTICLE2_DLL ON)

SET( APPLICATION_DEPENDENCIES )
SET( APPLICATION_LIBS )

INCLUDE_DIRECTORIES( ${SOURCE_DIR} )
INCLUDE_DIRECTORIES( ${SOURCE_DIR}/Utils )
INCLUDE_DIRECTORIES( ${SOURCE_DIR}/Tools )
INCLUDE_DIRECTORIES( ${THIRDPARTY_DIR}/boost )
INCLUDE_DIRECTORIES( ${THIRDPARTY_DIR}/stdex/include )

ADD_SUBDIRECTORY( ${SOURCE_DIR}/Utils ${CMAKE_TEMP_DIR}/Utils )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Kernel ${CMAKE_TEMP_DIR}/Kernel )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Metacode ${CMAKE_TEMP_DIR}/Metacode )

ADD_SUBDIRECTORY( ${SOURCE_DIR}/WindowsLayer ${CMAKE_TEMP_DIR}/WindowsLayer )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/System/Win32UnicodeSystem ${CMAKE_TEMP_DIR}/System/Win32UnicodeSystem )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/System/Win32ThreadSystem ${CMAKE_TEMP_DIR}/System/Win32ThreadSystem )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/System/Win32PluginSystem ${CMAKE_TEMP_DIR}/System/Win32PluginSystem )

ADD_SUBDIRECTORY( ${SOURCE_DIR}/Service/ServiceFactory ${CMAKE_TEMP_DIR}/Service/ServiceFactory )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Service/ServiceProvider ${CMAKE_TEMP_DIR}/Service/ServiceProvider )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Service/ServiceStringize ${CMAKE_TEMP_DIR}/Service/ServiceStringize )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Service/ServiceArchive ${CMAKE_TEMP_DIR}/Service/ServiceArchive )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Service/ServiceFile ${CMAKE_TEMP_DIR}/Service/ServiceFile )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Service/ServiceCodec ${CMAKE_TEMP_DIR}/Service/ServiceCodec )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Service/ServiceData ${CMAKE_TEMP_DIR}/Service/ServiceData )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Service/ServiceMemory ${CMAKE_TEMP_DIR}/Service/ServiceMemory )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Service/ServiceConverter ${CMAKE_TEMP_DIR}/Service/ServiceConverter )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Service/ServiceOptions ${CMAKE_TEMP_DIR}/Service/ServiceOptions )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Service/ServiceLogger ${CMAKE_TEMP_DIR}/Service/ServiceLogger )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Service/ServicePlugin ${CMAKE_TEMP_DIR}/Service/ServicePlugin )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Service/ServiceThread ${CMAKE_TEMP_DIR}/Service/ServiceThread )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Service/ServiceConfig ${CMAKE_TEMP_DIR}/Service/ServiceConfig )

ADD_SUBDIRECTORY( ${SOURCE_DIR}/Platform/Win32Platform ${CMAKE_TEMP_DIR}/Platform/Win32Platform )

ADD_SUBDIRECTORY( ${SOURCE_DIR}/Plugin/DevelopmentConverterPlugin ${CMAKE_TEMP_DIR}/Plugin/DevelopmentConverterPlugin )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Plugin/ImageCodecPlugin ${CMAKE_TEMP_DIR}/Plugin/ImageCodecPlugin )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Plugin/XmlCodecPlugin ${CMAKE_TEMP_DIR}/Plugin/XmlCodecPlugin )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Plugin/ZipPlugin ${CMAKE_TEMP_DIR}/Plugin/ZipPlugin )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Plugin/LZ4Plugin ${CMAKE_TEMP_DIR}/Plugin/LZ4Plugin )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/Plugin/Win32FileGroupPlugin ${CMAKE_TEMP_DIR}/Plugin/Win32FileGroupPlugin )

ADD_SUBDIRECTORY( ${SOURCE_DIR}/Tools ${CMAKE_TEMP_DIR}/Tools )