CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

OPTION(MENGINE_BUILD_ONLY_EXECUTABLE_MODULE "Mengine build only executable module" OFF)
OPTION(MENGINE_BUILD_MENGINE_MASTER_RELEASE "Mengine build master release" OFF)
OPTION(MENGINE_USE_PRECOMPILED_HEADER "Mengine use precompiled header" OFF)
OPTION(MENGINE_USE_PYTHON_FRAMEWORK "Mengine use python framework" ON)
OPTION(MENGINE_EXTERNAL_FRAMEWORK "Mengine external framework" OFF)
OPTION(MENGINE_USE_SUBFOLDER "Mengine use subfolder" OFF)

SET(MENGINE_PROJECT_NAME "Mengine_WIN32" CACHE STRING "Mengine project name")
SET(MENGINE_EXTERNAL_FRAMEWORK_SOURCE_PATH "" CACHE STRING "Mengine external framework source path")
SET(MENGINE_EXTERNAL_FRAMEWORK_TEMP_PATH "" CACHE STRING "Mengine external framework temp path")
SET(MENGINE_SUBFOLDER_NAME "Mengine" CACHE STRING "Mengine subfolder name")

MESSAGE("MENGINE_PROJECT_NAME: ${MENGINE_PROJECT_NAME}")
MESSAGE("MENGINE_BUILD_ONLY_EXECUTABLE_MODULE: ${MENGINE_BUILD_ONLY_EXECUTABLE_MODULE}")
MESSAGE("MENGINE_BUILD_MENGINE_MASTER_RELEASE: ${MENGINE_BUILD_MENGINE_MASTER_RELEASE}")
MESSAGE("MENGINE_USE_PRECOMPILED_HEADER: ${MENGINE_USE_PRECOMPILED_HEADER}")
MESSAGE("MENGINE_USE_PYTHON_FRAMEWORK: ${MENGINE_USE_PYTHON_FRAMEWORK}")
MESSAGE("MENGINE_EXTERNAL_FRAMEWORK: ${MENGINE_EXTERNAL_FRAMEWORK}")
MESSAGE("MENGINE_EXTERNAL_FRAMEWORK_SOURCE_PATH: ${MENGINE_EXTERNAL_FRAMEWORK_SOURCE_PATH}")
MESSAGE("MENGINE_EXTERNAL_FRAMEWORK_TEMP_PATH: ${MENGINE_EXTERNAL_FRAMEWORK_TEMP_PATH}")
MESSAGE("MENGINE_USE_SUBFOLDER: ${MENGINE_USE_SUBFOLDER}")
MESSAGE("MENGINE_SUBFOLDER_NAME: ${MENGINE_SUBFOLDER_NAME}")

PROJECT(${MENGINE_PROJECT_NAME})

INCLUDE(../macro_template.cmake)
INCLUDE(../win32_template.cmake)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /WX")

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

SET_MENGINE_ENVIRONMENT(WINDOWS DIRECTX X86 WIN32 MSVC)

SET(MENGINE_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../..)

# output paths
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${MENGINE_REPOSITORY}/build_temp/${PROJECT_NAME}/${CMAKE_GENERATOR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${MENGINE_REPOSITORY}/bin/${PROJECT_NAME}/${CMAKE_GENERATOR})

# input and thirdparty paths
SET(THIRDPARTY_DIR ${MENGINE_REPOSITORY}/dependencies)
SET(THIRDPARTY_LIB_DIR ${MENGINE_REPOSITORY}/build_temp/${MENGINE_LIB_DIR}/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE})

SET(MENGINE_SOURCE_DIR ${MENGINE_REPOSITORY}/src)
SET(CMAKE_TEMP_DIR ${CMAKE_BINARY_DIR}/Solutions)

# plugins
ADD_PLUGIN(MENGINE_PLUGIN_PYTHONFRAMEWORK ${MENGINE_USE_PYTHON_FRAMEWORK} OFF "MENGINE_PLUGIN_PYTHONFRAMEWORK")
ADD_PLUGIN(MENGINE_PLUGIN_DEVELOPMENTCONVERTER ON ON "MENGINE_PLUGIN_DEVELOPMENTCONVERTER")
ADD_PLUGIN(MENGINE_PLUGIN_NODEDEBUGRENDER ON OFF "MENGINE_PLUGIN_NODEDEBUGRENDER")
ADD_PLUGIN(MENGINE_PLUGIN_RESOURCEVALIDATE ON OFF "MENGINE_PLUGIN_RESOURCEVALIDATE")
ADD_PLUGIN(MENGINE_PLUGIN_RESOURCEPREFETCHER ON OFF "MENGINE_PLUGIN_RESOURCEPREFETCHER")
ADD_PLUGIN(MENGINE_PLUGIN_RESOURCECONVERT ON OFF "MENGINE_PLUGIN_RESOURCECONVERT")
ADD_PLUGIN(MENGINE_PLUGIN_RESOURCEDEBUGGER ON OFF "MENGINE_PLUGIN_RESOURCEDEBUGGER")
ADD_PLUGIN(MENGINE_PLUGIN_NODEDEBUGGER ON ON "MENGINE_PLUGIN_NODEDEBUGGER")
ADD_PLUGIN(MENGINE_PLUGIN_METABUFLOADER ON OFF "MENGINE_PLUGIN_METABUFLOADER")
ADD_PLUGIN(MENGINE_PLUGIN_JSON ON OFF "MENGINE_PLUGIN_JSON")
ADD_PLUGIN(MENGINE_PLUGIN_TEXTUREPACKER ON OFF "MENGINE_PLUGIN_TEXTUREPACKER")
ADD_PLUGIN(MENGINE_PLUGIN_WEBP ON OFF "MENGINE_PLUGIN_WEBP")
ADD_PLUGIN(MENGINE_PLUGIN_MOVIE ON OFF "MENGINE_PLUGIN_MOVIE")
ADD_PLUGIN(MENGINE_PLUGIN_MOVIE1 ON OFF "MENGINE_PLUGIN_MOVIE1")
ADD_PLUGIN(MENGINE_PLUGIN_VIDEO ON OFF "MENGINE_PLUGIN_VIDEO")
ADD_PLUGIN(MENGINE_PLUGIN_THEORA ON OFF "MENGINE_PLUGIN_THEORA")
ADD_PLUGIN(MENGINE_PLUGIN_BITMAPFONT ON OFF "MENGINE_PLUGIN_BITMAPFONT")
ADD_PLUGIN(MENGINE_PLUGIN_TTF ON OFF "MENGINE_PLUGIN_TTF")
ADD_PLUGIN(MENGINE_PLUGIN_SPINE ON OFF "MENGINE_PLUGIN_SPINE")
ADD_PLUGIN(MENGINE_PLUGIN_CURL ON ON "MENGINE_PLUGIN_CURL")
ADD_PLUGIN(MENGINE_PLUGIN_ASTRALAX ON ON "MENGINE_PLUGIN_ASTRALAX")
ADD_PLUGIN(MENGINE_PLUGIN_STEAM OFF ON "MENGINE_PLUGIN_STEAM")
ADD_PLUGIN(MENGINE_PLUGIN_OZZ_ANIMATION ON ON "MENGINE_PLUGIN_OZZ_ANIMATION")
ADD_PLUGIN(MENGINE_PLUGIN_ANDROID_NATIVE_FACEBOOK OFF OFF "MENGINE_PLUGIN_ANDROID_NATIVE_FACEBOOK")
ADD_PLUGIN(MENGINE_PLUGIN_ANDROID_NATIVE_UNITYADS OFF OFF "MENGINE_PLUGIN_ANDROID_NATIVE_UNITYADS")
ADD_PLUGIN(MENGINE_PLUGIN_ANDROID_NATIVE_ADMOB OFF OFF "MENGINE_PLUGIN_ANDROID_NATIVE_ADMOB")
ADD_PLUGIN(MENGINE_PLUGIN_ANDROID_NATIVE_DEVTODEV OFF OFF "MENGINE_PLUGIN_ANDROID_NATIVE_DEVTODEV")
ADD_PLUGIN(MENGINE_PLUGIN_ANDROID_NATIVE_LINKING OFF OFF "MENGINE_PLUGIN_ANDROID_NATIVE_LINKING")
ADD_PLUGIN(MENGINE_PLUGIN_ANDROID_NATIVE_LOCAL_NOTIFICATIONS OFF OFF "MENGINE_PLUGIN_ANDROID_NATIVE_LOCAL_NOTIFICATIONS")
ADD_PLUGIN(MENGINE_PLUGIN_WIN32_SOCKET ON ON "MENGINE_PLUGIN_WIN32_SOCKET")
ADD_PLUGIN(MENGINE_PLUGIN_POSIX_SOCKET OFF ON "MENGINE_PLUGIN_POSIX_SOCKET")
ADD_PLUGIN(MENGINE_PLUGIN_NODELEAKDETECTOR ON OFF "MENGINE_PLUGIN_NODELEAKDETECTOR")

#ADD_DEFINITIONS(-DMENGINE_RENDER_TEXTURE_RGBA)

if(MENGINE_BUILD_MENGINE_MASTER_RELEASE)
    ADD_DEFINITIONS(-DMENGINE_MASTER_RELEASE)
endif()

if(MENGINE_USE_PYTHON_FRAMEWORK)
    ADD_DEFINITIONS(-DMENGINE_USE_PYTHON_FRAMEWORK)
endif()

SET(APPLICATION_DEPENDENCIES)
SET(APPLICATION_LINK_LIBRARIES)

INCLUDE_DIRECTORIES(${MENGINE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${THIRDPARTY_DIR}/libmath/include)
INCLUDE_DIRECTORIES(${THIRDPARTY_DIR}/stdex/include)

ADD_SUBDIRECTORY(${MENGINE_SOURCE_DIR} ${CMAKE_TEMP_DIR}/src)

IF(MENGINE_EXTERNAL_FRAMEWORK)
    ADD_SUBDIRECTORY(${MENGINE_EXTERNAL_FRAMEWORK_SOURCE_PATH} ${MENGINE_EXTERNAL_FRAMEWORK_TEMP_PATH})
ELSEIF(MENGINE_USE_PYTHON_FRAMEWORK)
    ADD_SUBDIRECTORY(${MENGINE_SOURCE_DIR}/Frameworks/PythonFramework ${CMAKE_TEMP_DIR}/Frameworks/PythonFramework)
ENDIF()

ADD_SUBDIRECTORY(${MENGINE_SOURCE_DIR}/Win32Application ${CMAKE_TEMP_DIR}/Win32Apllication)